[gd_scene load_steps=3 format=3 uid="uid://7cvivtm8esg1"]

[ext_resource type="Script" uid="uid://b25d5u6bhwdhd" path="res://scripts/vocabs.gd" id="1_fi8gj"]
[ext_resource type="PackedScene" uid="uid://dsckvvmxhdqcw" path="res://scenes/Base.tscn" id="1_own8k"]

[node name="Vocabs" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fi8gj")

[node name="SourceWord" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.17
anchor_right = 1.0
anchor_bottom = 0.17
offset_bottom = 163.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 120
text = "dominus"
horizontal_alignment = 1

[node name="Feedback" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.98
anchor_right = 1.0
anchor_bottom = 0.98
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1

[node name="Instruction" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.02
anchor_right = 0.55
anchor_bottom = 0.02
offset_left = -868.0
offset_right = 868.0
offset_bottom = 82.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "Click on the correct translation of the word."
horizontal_alignment = 1

[node name="Option1" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.45
anchor_right = 0.06
anchor_bottom = 0.45
offset_top = -81.5
offset_right = 759.0
offset_bottom = 81.5
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 120
text = "landlord"

[node name="Option2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.94
anchor_top = 0.45
anchor_right = 0.94
anchor_bottom = 0.45
offset_left = -759.0
offset_top = -81.5
offset_bottom = 81.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 120
text = "leader"

[node name="Option3" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06
anchor_top = 0.7
anchor_right = 0.06
anchor_bottom = 0.7
offset_top = -81.5
offset_right = 759.0
offset_bottom = 81.5
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_focus_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 120
text = "lord"

[node name="Option4" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.94
anchor_top = 0.7
anchor_right = 0.94
anchor_bottom = 0.7
offset_left = -759.0
offset_top = -81.5
offset_bottom = 81.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 1, 1)
theme_override_font_sizes/font_size = 120
text = "father"

[node name="Base" parent="." instance=ExtResource("1_own8k")]
layout_mode = 1
offset_right = 0.0
offset_bottom = 0.0
metadata/_edit_lock_ = true

[connection signal="pressed" from="Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="Option3" to="." method="_on_option_3_pressed"]
[connection signal="pressed" from="Option4" to="." method="_on_option_4_pressed"]
